fix overflow for bevy name in settings modal

--- a/public/less/bevy/BevySettingsModal.less
+++ b/public/less/bevy/BevySettingsModal.less
@@ -5,7 +5,8 @@
       .modal-header {
         padding: 0px;
         .modal-title {
-
+          overflow-x: hidden;
+          text-overflow: ellipsis;
         }
         .close {
           padding-left: 0px;
